--- a/index.html
+++ b/index.html
@@ -1,23 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>თბილისი</title>
+    <title>თბილისი</title>
+    <style>
+        #centered-text {
+            text-align: center;
+            font-size: 24px; /* Adjust the font size as needed */
+        }
+    </style>
 </head>
 <body>
-
-<div><i style="color:red;">თ<i style="color:blue;">ბ<i style="color:purple;">ი<i style="color:purple;">ლ<i style="color:pink;">ი<i style="color:green;">ს<i style="color:black;">ი
-<hr>
-<div style="display: flex;justify-content: center;"><img src="tbilisi2.jpg" width="400" height="370"> </div
-
-<hr>
-<p style=text-align:justify;">თბილისი- დედაქალაქი და მუნიციპალიტეტი საქართველოში; 1922–1936 წლებში ერთდროულად იყო ამიერკავკასიის  დედაქალაქი
-მდებარეობს აღმოსავლეთ საქართველოში,თბილისი კავკასიის რეგიონის მნიშვნელოვანი ინდუსტრიული, სოციალური და კულტურული ცენტრია და ბოლო
-დროს ერთ-ერთი უმნიშვნელოვანესი სატრანსპორტო კვანძი ხდება გლობალური ენერგომატარებლებისა და სავაჭრო პროექტებისთვის.ქალაქი ისტორიული აბრეშუმის დიდი გზის ერთ-ერთ
-მარშრუტზე მდებარეობს და მნიშვნელოვანი სავაჭრო სატრანზიტო ცენტრის პოზიცია უჭირავს რუსეთის ჩრდილო კავკასიას, თურქეთსა და ტრანსკავკასიის სომხეთისა და აზერბაიჯანის რესპუბლიკების გადაკვეთაზე სტრატეგიული მდებარეობით.
-თბილისის ძველი სახელწოდება იყო ტფილისი.</p>
-<hr>
-<div style="display: flex;justify-content: center;"><img src="tbilisi-old.jpg" width="400" height="370"> </div>
-
-<hr>
-
-<a href="https://tbilisi.gov.ge/" target="_blank">თბილისის მერიის ოფიციალური საიტი<a/><br>
+    <div id="centered-text"><i style="color:red;">თ<i style="color:blue;">ბ<i style="color:purple;">ი<i style="color:purple;">ლ<i style="color:pink;">ი<i style="color:green;">ს<i style="color:black;">ი</div></i></i></i></i></i></i></i>
+    <hr>
+    <div style="display: flex; justify-content: center;"><img src="tbilisi2.jpg" width="400" height="370"></div>
+    <hr>
+    <p style="text-align: justify;">თბილისი- დედაქალაქი და მუნიციპალიტეტი საქართველოში; 1922–1936 წლებში ერთდროულად იყო ამიერკავკასიის  დედაქალაქი
+        მდებარეობს აღმოსავლეთ საქართველოში, თბილისი კავკასიის რეგიონის მნიშვნელოვანი ინდუსტრიული, სოციალური და კულტურული ცენტრია და ბოლო
+        დროს ერთ-ერთი უმნიშვნელოვანესი სატრანსპორტო კვანძი ხდება გლობალური ენერგომატარებლებისა და სავაჭრო პროექტებისთვის. ქალაქი ისტორიული აბრეშუმის დიდი გზის ერთ-ერთ
+        მარშრუტზე მდებარეობს და მნიშვნელოვანი სავაჭრო სატრანზიტო ცენტრის პოზიცია უჭირავს რუსეთის ჩრდილო კავკასიას, თურქეთსა და ტრანსკავკასიის სომხეთისა და აზერბაიჯანის რესპუბლიკების გადაკვეთაზე სტრატეგიული მდებარეობით.
+        თბილისის ძველი სახელწოდება იყო ტფილისი.</p>
+    <hr>
+    <div style="display: flex; justify-content: center;"><img src="tbilisi-old.jpg" width="400" height="370"></div>
+    <hr>
+    <a href="https://tbilisi.gov.ge/" target="_blank">თბილისი
