--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         #centered-text {
             text-align: center;
-            font-size: 24px; /* Adjust the font size as needed */
+            font-size: 24px; 
         }
     </style>
 </head>
